--- a/.github/workflows/prod_solidaree.yml
+++ b/.github/workflows/prod_solidaree.yml
@@ -35,8 +35,8 @@ jobs:
       - name: Cleaning testing files
         run: |
           cd solidare/
-          rm db.sqlite3
-          rm .env
+          rm -f db.sqlite3
+          rm -f .env
           cd ..
 
         
