--- a/.github/workflows/prod_solidaree.yml
+++ b/.github/workflows/prod_solidaree.yml
@@ -7,7 +7,7 @@ name: Build and deploy Python app to Azure Web App - solidaree
 on:
   push:
     branches:
-      - prod
+      - main
   workflow_dispatch:
 
 jobs:
