--- a/.github/workflows/main_solidaree.yml
+++ b/.github/workflows/main_solidaree.yml
@@ -43,7 +43,11 @@ jobs:
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: |
+          cd solidare/
+          zip release.zip ./* -r
+          cd ..
+          mv solidare/release.zip .
         
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
